# syncspec

./: .gitignore  .syncspec_ignore  README.md  cli.py  demo.py  demo1.py  demo3.py  demo4.py  encode_parameters.py  ensure_balanced_delimiters.py  error.py  graph.dot  keyvalue.json  main.py  main1.py  main3.py  models.py  packge_info.md  parse_delimiters_post_condition.py  parse_into_fragments.py  parse_segments.py  pyproject.toml  syncspec-graph.py  syncspec.dot  syncspec.json  test_encode_parameters.py  test_ensure_balanced_delimiters.py  test_models.py  test_parse_segments.py
experiments/: Combine Nodes.md  demo2.py  demo4.py  demo5.py  demo6.py  demo7.py
in/: unclosed.md
input/: Combine Nodes.md  Create Blocks.md  Syncspec List.md  Validate Text.md  example.md  example1.md  example3.md
input1/: import.md  missing_delimiter.md
output/: Graph Edges.md  Include Block.md  Production.md  Source Block.md  Syncspec Text.md  example.md  example1.md  example3.md
scripts/: efr.py  template.md  test_erf.py
specs/: Add Graph Edges.md  Add Graph Nodes.md  CLI.md  Combine Blocks.md  Combine Errors.md  Combine Nodes.md  Combine Strings.md  Common.md  Create Blocks.md  Create Directives.md  Defragment text.md  Demo.md  Design.md  Encode parameters.md  Ensure balanced delimiters.md  Export Directive.md  Fragment Text.md  Fragments to Blocks.md  Fragments to Tracker.md  Function.md  Graph Edges.md  Ideas.md  Import Block.md  Import Directive.md  Include Block.md  Include directive.md  Index Fragments.md  Machine.md  Monad.md  Parse into fragments.md  Parse segments.md  (+19 more)
(+131 files in other folders)
