[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "syncspec"
version = "0.1.0"
description = "Transclusion for Spec Driven Development"
readme = "README.md"
authors = [
    {name = "Kim Jarvis", email = "kim.jarvis@tpfsystems.com"}
]
license = "MIT"
requires-python = ">=3.6"
dependencies = [
    "jinja2>=3.0.0",      # Compatible with Python 3.6+
    "networkx>=2.5",       # networkx 3.x requires Python >=3.8, so use older version
    "pydot>=1.4.2",       # Compatible with Python 3.6+
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",      # pytest 9.x requires Python >=3.8
]

[project.urls]
Homepage = "https://github.com/kimjarvis/syncspec"
Issues = "https://github.com/kimjarvis/syncspec/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["syncspec*"]