[build-system]
requires = ["setuptools>=82", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "syncspec"
version = "0.1.2"
description = "Transclusion for Spec-as-Source Development "
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pathspec>=1.0.4",
    "setuptools>=82.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",  # pytest 7.x supports Python 3.7+
]
test = [
    "pytest>=7.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
syncspec = "syncspec.cli:main"
